--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,9 +1,3 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
-
-"PhysRev":
-  url: https://journals.aps.org/
-
-"Vision":
-  color: "#009f36"
+"ACL Findings":
+  color: "#ff7979"
+  url: https://aclanthology.org/
